<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context="com.example.android.inventoryapp.DetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/heading"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/description"
            android:id="@+id/detail_product_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/heading"
            android:text="@string/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/description"
            android:id="@+id/detail_quantity_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/sale"
            android:id="@+id/detail_make_sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/detail_modified_quantity_edittext"
                android:hint="@string/new_quantity"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/detail_modify_quantity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify"/>
        </LinearLayout>

        <TextView
            style="@style/heading"
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/description"
            android:id="@+id/detail_price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/heading"
            android:text="@string/supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/description"
            android:id="@+id/detail_supplier_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/heading"
            android:text="@string/Picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/detail_order_button"
            android:text="@string/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/detail_delete_button"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/detail_picture_image"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="200dp" />
    </LinearLayout>

</ScrollView>